--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,31 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-mac-arm:
+    runs-on: macos-latest-xlarge
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+          fetch-depth: 0
+      - name: Checkout submodules
+        run: git submodule update --init --recursive
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.19
+      - name: Install Dependences
+        run: |
+          brew install libpcap upx
+      #          git submodule update --init --recursive --remote
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          version: latest
+          args: release -f .github/build/mac_arm64.yml --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build-mac:
     runs-on: macos-latest
     steps:
